fix css, remove horizontal scroller

--- a/src/components/Brands/Brands.module.scss
+++ b/src/components/Brands/Brands.module.scss
@@ -2,7 +2,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100vw;
   padding: 0.6875rem;
 
   @media (min-width: 810px) {
@@ -26,11 +25,12 @@
 }
 
 .fieldset {
+  width: 100%;
+  margin: 0;
   font-family: "Oswald", sans-serif;
   font-weight: 400;
   font-size: 1.25rem;
   text-align: left;
-  width: 100%;
 
   @media (min-width: 810px) {
     font-size: 1.5rem;
