--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,50 +1,46 @@
-footer {
-  width: 100vw;
-  .footer {
+.footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: black;
+  padding: 1rem 0.875rem 3rem 0.875rem;
+
+  .items {
     width: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
     align-items: center;
-    background-color: black;
-    padding: 1rem 0.875rem 3rem 0.875rem;
+    list-style: none;
+    padding: 0;
 
-    .items {
+    @media (min-width: 640px) {
+      align-items: flex-start;
+    }
+
+    @media (min-width: 810px) {
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: flex-start;
+    }
+  }
+  & hr {
+    display: none;
+
+    @media (min-width: 640px) {
+      display: inline;
       width: 100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      align-items: center;
-      list-style: none;
-      padding: 0;
-
-      @media (min-width: 640px) {
-        align-items: flex-start;
-      }
-
-      @media (min-width: 810px) {
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: flex-start;
-      }
+      height: 1px;
+      border: none;
+      background-color: #4f4f4f;
     }
-    & hr {
-      display: none;
+  }
 
-      @media (min-width: 640px) {
-        display: inline;
-        width: 100%;
-        height: 1px;
-        border: none;
-        background-color: #4f4f4f;
-      }
-    }
+  .logo {
+    align-self: center;
 
-    .logo {
-      align-self: center;
-
-      @media (min-width: 640px) {
-        align-self: flex-end;
-      }
+    @media (min-width: 640px) {
+      align-self: flex-end;
     }
   }
 }
