--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -11,6 +11,10 @@
   text-align: center;
   z-index: 10;
 
+  &.space {
+    padding-right: 1.375rem;
+  }
+
   .navigation {
     display: flex;
     flex-direction: row;
