--- a/src/components/MainImage/MainImage.module.scss
+++ b/src/components/MainImage/MainImage.module.scss
@@ -1,5 +1,4 @@
 .image {
-  width: 100vw;
   height: calc(100vh - 3.125rem);
   margin-top: 3.125rem;
   z-index: 0;
