--- a/src/components/Offers/Offers.module.scss
+++ b/src/components/Offers/Offers.module.scss
@@ -1,5 +1,4 @@
 .section {
-  width: 100vw;
   display: grid;
   grid-template-rows: repeat(4, calc(25% - 0.6875rem));
   gap: 0.6875rem;
