--- a/src/components/Slider/Slider.module.scss
+++ b/src/components/Slider/Slider.module.scss
@@ -1,6 +1,6 @@
 .slider {
+  width: 100%;
   position: absolute;
-  width: 100vw;
   height: 80vh;
   bottom: 0.6875rem;
   display: flex;
